src/test/ui/async-await/issue-76547.stderr
error[E0623]: lifetime mismatch
  --> $DIR/issue-76547.rs:20:13
   |
LL | async fn fut(bufs: &mut [&mut [u8]]) {
   |                    ---------------- these two types are declared with different lifetimes...
LL |     ListFut(bufs).await
   |             ^^^^ ...but data from `bufs` flows into `bufs` here

error[E0623]: lifetime mismatch
  --> $DIR/issue-76547.rs:34:14
   |
LL | async fn fut2(bufs: &mut [&mut [u8]]) -> i32 {
   |                     ---------------- these two types are declared with different lifetimes...
LL |     ListFut2(bufs).await
   |              ^^^^ ...but data from `bufs` flows into `bufs` here

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0623`.
